Implement Promotion API, adding more unit test
