# spring-server-generated/src/main/java/io/swagger/Swagger2SpringBoot.java
@@ -7,6 +7,7 @@ import io.swagger.model.Order;
 import io.swagger.model.Pizza;
 import io.swagger.model.PizzaSize;
 import io.swagger.model.PriceRule;
+import io.swagger.model.Promotion;
 import io.swagger.model.Toppings;
 import io.swagger.repository.CaloriesRepository;
 import io.swagger.repository.CreditCardsRepository;
@@ -14,6 +15,7 @@ import io.swagger.repository.OrderRepository;
 import io.swagger.repository.PizzaRepository;
 import io.swagger.repository.PizzaSizesRepository;
 import io.swagger.repository.PriceRuleRepository;
+import io.swagger.repository.PromotionRepository;
 import io.swagger.repository.ToppingsRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
@@ -43,6 +45,8 @@ public class Swagger2SpringBoot implements CommandLineRunner {
     private PizzaRepository pizzaRepository;
     @Autowired
     private OrderRepository orderRepository;
+    @Autowired
+    private PromotionRepository promotionRepository;
 
     @Override
     public void run(String... arg0) throws Exception {
@@ -56,6 +60,7 @@ public class Swagger2SpringBoot implements CommandLineRunner {
         PriceRule.initialize(priceRuleRepository);
         Pizza.initialize(pizzaRepository);
         Order.initialize(orderRepository);
+        Promotion.initialize(promotionRepository);
     }
 
     public static void main(String[] args) throws Exception {
